--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -162,7 +162,10 @@
 					type: Boolean,
 					value: false,
 					observer:'_activeChanged',
-				}
+				},
+
+				routeData:Object,
+				subroute:Object,
 
     		}, 
     		
