--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -257,6 +257,9 @@
                   type:Boolean,
                 },
 
+                subroute:Object,
+                routeData:Object,
+
             },
 
             listeners :{
