--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -5,6 +5,8 @@
 <link rel='import' href='../../../bower_components/app-route/app-route.html'>
 <link rel='import' href='../../../bower_components/app-route/app-location.html'>
 
+<link rel="import" href="../common/aq-check-authentication.html">
+
 <link rel="import" href="../aq-markdown-editor.html">
 <link rel="import" href="./aq-community-previewpost.html">
 <link rel="import" href="../../dialog/aq-community-attachbacktest-dialog.html">
@@ -109,6 +111,7 @@
 
     <template>
 
+        <aq-check-authentication id='authItem'></aq-check-authentication>
         <app-location route="{{route}}"></app-location>
 
         <app-route
@@ -225,6 +228,9 @@
                 newThreadId: String,
 
                 APIEndPoint: String,
+
+                active:Boolean,
+
             },
 
             listeners :{
@@ -236,7 +242,7 @@
             attached: function() {
             },
 
-            ready: function() { 
+            /*ready: function() { 
                 var x = localStorage.getItem('my-app-storage');
                 var user = JSON.parse(x).user;
                 if (user.token) {
@@ -245,23 +251,31 @@
                     "Content-Type": "application/json"};  
                 }
                 this.APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
-            },
+            },*/
 
             computeFollowPostUrl: function(threadId) {
-              return this.APIEndPoint+'/thread/'+threadId+'/follow';
+              var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
+              return APIEndPoint+'/thread/'+threadId+'/follow';
             },
 
             postThread: function() {
                 var x = this.processInput();
                 
-                if(x) {
+                if(x & this.$.authItem.checkHasToken()) {
+                  this.header = this.$.authItem.getHeader();
                   this.$.thread.generateRequest();
                 }
             },
             
             onPostThreadResponse: function(data) {
                 this.newThreadId = data.detail.response._id;
-                this.$.follows.generateRequest();
+                
+                if(this.$.authItem.checkHasToken()) {
+                  this.header = this.$.authItem.getHeader(); 
+                  this.$.follows.generateRequest();
+                  
+                }
+                
                 this.fire('rt-changed', {route:"/dashboard/community/topics/"+this.newThreadId});
             },
 
