--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -53,6 +53,7 @@
           <aq-community-main></aq-community-main>
           <aq-help-main></aq-help-main>
           <aq-home-main></aq-home-main>
+        </div>
 
   </template>
 
