--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -24,10 +24,10 @@
         active="{{active}}">
     </app-route>
 
-    <template is='dom-if' if='{{active}}'>
+    <!--template is='dom-if' if='{{active}}'-->
         <aq-analyze-home></aq-analyze-home>
         <aq-analyze-detail></aq-analyze-detail>   
-    </template>
+    <!--/template-->
 
   </template>
 
