--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -112,12 +112,13 @@
     <template>
 
         <aq-check-authentication id='authItem'></aq-check-authentication>
-        <app-location route="{{route}}"></app-location>
+        <app-location route="{{route}}" quer-params="{{queryParams}}"></app-location>
 
         <app-route
             route="{{route}}"
             pattern="/dashboard/community/create"
-            active="{{active}}">
+            active="{{active}}"
+            query-params="{{queryParams}}">
         </app-route>
 
         <iron-ajax 
@@ -211,14 +212,11 @@
 
                 error:String,
 
-                threadData:Object,
-
                 header:Object,
 
                 attachedBacktestId: {
                   type:String,
-                  value:"",
-                  observer:'_attachedBacktestIdChanged',
+                  observer:'_backtestIdChanged',
                 }, 
 
                 attachedMessage: String,
@@ -227,9 +225,8 @@
 
                 newThreadId: String,
 
-                APIEndPoint: String,
-
                 active:Boolean,
+                queryParams:Object,
 
             },
 
@@ -238,6 +235,8 @@
               'submit-clicked':'postThread',
               'backtest-attached':'onBacktestAttached',
             },
+
+            observers:['_activeChanged(active, queryParams)'],
 
             attached: function() {
             },
@@ -353,13 +352,27 @@
               this.preview = false;
             },
 
-            _attachedBacktestIdChanged: function(nId, oId) {
-              if(nId) {
-                  this.async(this.handleAttachedBacktest, 500);
+            _activeChanged: function(active, queryParams) {
+                console.log("Active or Route Data create post changed");
+                
+                this.resetView();
 
-              }
+                if (active && queryParams.backtestId) {
+                    console.log("in community create :"+ active + queryParams.backtestId);
+                   this.attachedBacktestId = queryParams.backtestId;
+                } 
+            },
+
+            resetView: function() {
+                this.preview = false;
+                this.attachedBacktestId = "";
+                this.attachedMessage = "";
+                this.threadData = {};
+            },
+
+            _backtestIdChanged: function(nId, oId) {
+                this.async(this.handleAttachedBacktest, 200);
             }
-
 
 
         });
