--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -22,17 +22,16 @@
 	        --border-bottom: 1px solid #e5e5e5;
 	        border: 1px solid #9ecbda;
 	        border-top: none;
-	        background-color: white;--#e5f1f5;
-	        color:#24293d;--#02558b;
+	        background-color: white;
+	        color:#24293d;
 	      }
 
         .row {
 	        box-sizing: border-box;
 	        overflow: hidden;
-	        --width: 100%;
 	        font-weight: 400;
 	        font-size: 13px;
-	        min-width: 640px;
+	        min-width: 600px;
 	    }
 
      	.row paper-checkbox {
@@ -50,9 +49,8 @@
 	    }
    
         .strategy-name {
-	        --width:350px;
-	        width:32%;
-	        
+	        width:36%;
+	        min-width:190px;
 	        --font-weight: bold;
 	        --max-width: 250px;
 	        margin-right: 30px;
@@ -67,7 +65,16 @@
 	      	width:36%;
 	      	--width: 350px;   	
 	      	margin-right:30px;
+	      	min-width:190px;
 
+	    }
+
+	    .strategy-bt{
+	    	min-width: 150px;
+	    }
+
+	    .strategy-bt span {
+	    	margin-left: 30px;
 	    }
 
         .strategy-bt:hover {
@@ -94,7 +101,7 @@
 	      	<paper-checkbox id='checkbox' noink on-change='onCheck'></paper-checkbox>
 	          <div class="strategy-name self-center"><span on-click = 'goToEditor'>[[strategyName]]</span></div>  
 	          <div class="strategy-desc self-center">[[strategyDesc]]</div>
-	          <div on-click='goToAnalyze' class="strategy-bt self-center">[[numBacktest]]</div>
+	          <div on-click='goToAnalyze' class="strategy-bt self-center"><span>[[numBacktest]]</span></div>
         </div>
 	</template>
 
