--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -26,12 +26,12 @@
 
       .header {
       	border: 1px solid #9ecbda;--#d0d0d0;
-        padding: 0 55px;
+        --padding: 0 55px;
         line-height: 56px;
         font-size: 18px;
         font-weight: bold;
         background-color:#e3f6ed;--#9ecbda;--#90c3d4;--#acd2df;
-        min-width:640px;
+        min-width:600px;
 
       }
 
@@ -58,22 +58,23 @@
       }
 
       .name {
-        --min-width:220px;
+        min-width:190px;
         width:36%;
         font-weight: bold;
         margin-right: 30px;
+        margin-left:55px;
       }
 
       .description {
       	width:36%;
-      	--min-width: 250px;
+      	min-width: 190px;
       	margin-right: 30px;
       	padding-left: 0px;
       }
 
       .backtest {
       	--width: 250px;
-      	--min-width: 350px;
+      	min-width: 140px;
       }
 
       .name .narrow {
