--- a/src/layouts/aq-editor-main.html
+++ b/src/layouts/aq-editor-main.html
@@ -141,7 +141,7 @@
 
       openCloneDialog: function(e) {
 
-        if(!this.header) {
+        if(!this.$.authItem.checkHasToken()) {
           this.fire('rt-changed',{route:'/user/signin'});
         }
         
@@ -153,7 +153,7 @@
                           "code" : strategy.code,
                           "language":strategy.language,
                           "type":strategy.type};
-
+                          
         this.$.strategyCloneDialog.open();
         
       },
